# GPTEigenpackConverter

./: EvalScan.cpp  Global.h  Makefile.am  README.md  configure.ac  main.cpp
EigenpackReader/: EigenpackReader.cpp  EigenpackReader.hpp  EigenpackReaderBase.cpp  EigenpackReaderBase.hpp  GridEigenpackReader.cpp  GridEigenpackReader.hpp
EigenpackReader/Eigenvalues/: Eigenvalues.cpp  Eigenvalues.hpp
EigenpackReader/FileReader/: FileReader.cpp  FileReader.hpp
EigenpackReader/Metadata/: Metadata.cpp  Metadata.hpp  MetadataReader.cpp  MetadataReader.hpp  MetadataStructs.cpp  MetadataStructs.hpp  SiteBlock.hpp
EigenpackReader/Validation/: BasicBinary.cpp  BasicBinary.hpp
Utils/: FP16.cpp  FP16.hpp  StringManip.cpp  StringManip.hpp  Typedefs.hpp  ZipReader.cpp  ZipReader.hpp
docs/: UserGuide.tex
tests/: Test_converted_verify.cpp
