 ACLOCAL_AMFLAGS = -I .buildutils/m4
 
 bin_PROGRAMS = GPTEigenpackConverter
 
GPTEigenpackConverter_SOURCES = main.cpp                                     \
                                EigenpackReader/EigenpackReader.cpp          \
                                EigenpackReader/EigenpackReaderBase.cpp      \
                                EigenpackReader/GridEigenpackReader.cpp      \
                                EigenpackReader/Eigenvalues/Eigenvalues.cpp  \
                                EigenpackReader/FileReader/FileReader.cpp    \
                                EigenpackReader/Metadata/Metadata.cpp        \
                                EigenpackReader/Metadata/MetadataReader.cpp  \
                                EigenpackReader/Metadata/MetadataStructs.cpp \
                                EigenpackReader/Validation/BasicBinary.cpp   \
                                Utils/FP16.cpp                               \
                                Utils/StringManip.cpp

